@@ -95,7 +95,7 @@ extern int multi_protocol; // set and determinate used protocol
 #define MULTI_PROTO_UDP 1 // UDP protocol
 
 // What version of the multiplayer protocol is this? Increment each time something drastic changes in Multiplayer without the version number changes. Reset to 0 each time the version of the game changes
-#define MULTI_PROTO_VERSION	static_cast<uint16_t>(5)
+#define MULTI_PROTO_VERSION	static_cast<uint16_t>(6)
 // PROTOCOL VARIABLES AND DEFINES - END
 
 // limits for Packets (i.e. positional updates) per sec
@@ -735,6 +735,16 @@ struct netplayer_info : prohibit_void_ptr<netplayer_info>
 };
 
 #ifdef dsx
+#if defined(DXX_BUILD_DESCENT_II)
+struct ThiefModifier
+{
+	enum Flags : uint8_t {
+		Absent = 1,
+		NoEnergyWeapons,
+	};
+};
+#endif
+
 namespace dsx {
 /*
  * The Network Game structure
@@ -779,6 +789,7 @@ struct netgame_info : prohibit_void_ptr<netgame_info>, ignore_window_pointer_t
 #if defined(DXX_BUILD_DESCENT_II)
 	uint8_t Allow_marker_view;
 	uint8_t AlwaysLighting;
+	uint8_t ThiefModifierFlags;
 #endif
 	uint8_t ShowEnemyNames;
 	uint8_t BrightPlayers;
