@@ -221,7 +221,10 @@ static void gameseq_init_network_players(object_array &objects)
 
 	ConsoleObject = &objects.front();
 	unsigned j = 0, k = 0;
+#if defined(DXX_BUILD_DESCENT_II)
+	const auto remove_thief = Netgame.ThiefModifierFlags & ThiefModifier::Absent;
 	const auto multiplayer = Game_mode & GM_MULTI;
+#endif
 	const auto multiplayer_coop = Game_mode & GM_MULTI_COOP;
 	auto &vmobjptridx = objects.vmptridx;
 	range_for (const auto &&o, vmobjptridx)
@@ -246,8 +249,14 @@ static void gameseq_init_network_players(object_array &objects)
 				obj_delete(o);
 			j++;
 		}
-		else if (type == OBJ_ROBOT && multiplayer && robot_is_companion(Robot_info[get_robot_id(o)]))
-			obj_delete(o);		//kill the buddy in netgames
+#if defined(DXX_BUILD_DESCENT_II)
+		else if (type == OBJ_ROBOT && multiplayer)
+		{
+			auto &ri = Robot_info[get_robot_id(o)];
+			if (robot_is_companion(ri) || (robot_is_thief(ri) && remove_thief))
+				obj_delete(o);		//kill the buddy in netgames
+		}
+#endif
 	}
 	NumNetPlayerPositions = k;
 }
@@ -272,6 +281,21 @@ void gameseq_remove_unused_players()
 		{
 			obj_delete(vmobjptridx(i.objnum));
 		}
+#if defined(DXX_BUILD_DESCENT_II)
+		if (PlayerCfg.ThiefModifierFlags & ThiefModifier::Absent)
+		{
+			range_for (const auto &&o, vmobjptridx)
+			{
+				const auto type = o->type;
+				if (type == OBJ_ROBOT)
+				{
+					auto &ri = Robot_info[get_robot_id(o)];
+					if (robot_is_thief(ri))
+						obj_delete(o);
+				}
+			}
+		}
+#endif
 	}
 }
 
